<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WashTimetable</string>

    <string name="name">Name</string>
    <string name="boxNumber">Box number</string>

    <string name="addNewOrder">Add new order</string>
    <string name="ok">OK</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="telNumber">Telephone number</string>
    <string name="time">Time</string>

    <string name="dbIsNotOpened">Database isn\'t opened</string>
</resources>
