<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:id="@+id/brand"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:id="@+id/color"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telNumber"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:id="@+id/telNumber"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            />

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewOrder"
            android:padding="20dip"
            android:id="@+id/addButton"
            android:layout_gravity="center"/>

</LinearLayout>