<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:id="@+id/name"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxNumber"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:id="@+id/boxNumber"
              android:digits="0123456789"
            />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:padding="20dip"
            android:id="@+id/setButton"
            android:layout_gravity="center"/>

</LinearLayout>

